src/App.css
.NavBar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 80px;
  border-bottom: 3px solid #f4f5f0;
}

.NavBar h1 {
  margin-left: 1em;
}

.LogoContainer {
  display: flex;
  align-items: center;
  flex-basis: 50%;
  padding-left: 3%;
}

.NavLinks {
  display: flex;
  justify-content: flex-end;
  flex-basis: 50%;
  padding-right: 3%;
}

img {
  width: 50px;
  height: 50px;
}

a {
  text-decoration: none;
  color: #3591ff;
  font-size: 1.2rem;
  align-items: center;
  padding: 0 15px 0 15px;
}

a:nth-child(2) {
  border-right: 1px solid black;
}

.currentPage {
  color: #3591ff;
  text-decoration: underline;
}

.rocket-container {
  display: flex;
  gap: 20px;
  margin: 20px 80px;
}

.rocket-details {
  display: flex;
  flex-direction: column;
  margin-right: 50px;
  font-family: sans-serif;
  font-weight: 400;
  font-size: 15px;
  line-height: 1.5;
}

.rocket-title {
  margin: 3px;
  font-weight: 400;
}

.rocket-description {
  word-spacing: 2px;
  font-size: 14px;
}

.rocket-image {
  width: 280px;
  height: 210px;
}

.rocket-badge {
  background-color: rgb(33, 177, 182);
  color: #fff;
  padding: 3px;
  font-size: 14px;
  border-radius: 3px;
  margin-right: 5px;
}

.rocket-cancel-btn,
.rocket-reserve-btn {
  border-radius: 4px;
  color: #fff;
  cursor: pointer;
  height: 40px;
  padding: 5px;
  width: 150px;
  font-size: 14px;
}

.rocket-reserve-btn {
  background-color: #0290ff;
  color: #fff;
  border: none;
}

.rocket-cancel-btn {
  background-color: white;
  border: 1px solid #6c757e;
  color: #6c757e;
}

.profile-container {
  display: flex;
  margin: 40px;
}

.profile-rockets-title {
  font-size: 30px;
  font-weight: 400;
}

.reserve-container {
  width: 45%;
}

.profile-rockets {
  border: 1.5px solid #e8e8e8;
}

.reserve-item {
  border-bottom: 1.5px solid #e8e8e8;
  padding: 15px;
}

.no-reserve {
  padding: 15px;
  margin: 0;
}

